--- a/templates/islandora-book-page.html.twig
+++ b/templates/islandora-book-page.html.twig
@@ -1,18 +1,18 @@
-<?php
+{#
 /**
  * @file
  * Template file to style output.
  */
-?>
+#}
 <?php
   // @FIXME
 // l() expects a Url object, created from a route name or external URI.
 // print $book_object_id ? l(t('Return to Book View'), "islandora/object/{$book_object_id}") : t('Orphaned page (no associated book)');
 
 ?>
-<?php if (isset($viewer)): ?>
+{% if viewer is defined %}
   <div id="book-page-viewer">
-    <?php print $viewer; ?>
+    {{ viewer }}
   </div>
 <?php elseif (isset($object['JPG']) && islandora_datastream_access(ISLANDORA_VIEW_OBJECTS, $object['JPG'])): ?>
   <div id="book-page-image">
@@ -29,12 +29,12 @@
 // Calling _theme() directly can alter the expected output and potentially
 // introduce security issues (see https://www.drupal.org/node/2195739). You
 // should use renderable arrays instead.
-// 
-// 
+//
+//
 // @see https://www.drupal.org/node/2195739
 // print theme('image', $params);
 
     ?>
   </div>
-<?php endif; ?>
+{% endif %}
 <!-- @todo Add table of metadata values -->
