book and page view port

--- a/templates/islandora-book-page.html.twig
+++ b/templates/islandora-book-page.html.twig
@@ -4,37 +4,18 @@
  * Template file to style output.
  */
 #}
-<?php
-  // @FIXME
-// l() expects a Url object, created from a route name or external URI.
-// print $book_object_id ? l(t('Return to Book View'), "islandora/object/{$book_object_id}") : t('Orphaned page (no associated book)');
+{% if book_object_id %}
+  <a href="{{ path('islandora.view_object', {'object' : book_object_id}) }}">{{ 'Return to Book View'|t }}</a>
+{% else %}
+{{ 'Orphaned page (no associated book)'|t }}
+{% endif %}
 
-?>
 {% if viewer is defined %}
   <div id="book-page-viewer">
     {{ viewer }}
   </div>
-<?php elseif (isset($object['JPG']) && islandora_datastream_access(ISLANDORA_VIEW_OBJECTS, $object['JPG'])): ?>
+{% elseif backup_image is defined %}
   <div id="book-page-image">
-    <?php
-      // @FIXME
-// url() expects a route name or an external URI.
-// $params = array(
-//         'path' => url("islandora/object/{$object->id}/datastream/JPG/view"),
-//         'attributes' => array(),
-//       );
-
-      // @FIXME
-// theme() has been renamed to _theme() and should NEVER be called directly.
-// Calling _theme() directly can alter the expected output and potentially
-// introduce security issues (see https://www.drupal.org/node/2195739). You
-// should use renderable arrays instead.
-//
-//
-// @see https://www.drupal.org/node/2195739
-// print theme('image', $params);
-
-    ?>
+    {{ backup_image }}
   </div>
 {% endif %}
-<!-- @todo Add table of metadata values -->
