Fix ISBN identifier issue
D8 port of
https://github.com/Islandora/islandora_solution_pack_book/pull/202

--- a/data/forms/book_form_mods.xml
+++ b/data/forms/book_form_mods.xml
@@ -632,7 +632,7 @@
               <value>&lt;identifier type="isbn"&gt;%value%&lt;/identifier&gt;</value>
             </create>
             <read>
-              <path>mods:identifier</path>
+              <path>mods:identifier[@type='isbn']</path>
               <context>parent</context>
             </read>
             <update>
